k8s/backend1-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-post
  labels:
    app: backend1
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1
      version: blue
  template:
    metadata:
      labels:
        app: backend1
        version: blue
    spec:
      containers:
        - name: backend1
          image: 390638349876.dkr.ecr.us-east-1.amazonaws.com/devops/post:latest
          ports:
            - containerPort: 8080
