k8s/frontend-deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: green
  template:
    metadata:
      labels:
        app: frontend
        version: green
    spec:
      containers:
        - name: frontend
          image: 390638349876.dkr.ecr.us-east-1.amazonaws.com/devops/frontgreen:latest
          ports:
            - containerPort: 80
