k8s/backend1-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-post
spec:
  selector:
    app: backend1
    version: blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
