k8s/backend2-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-signup
spec:
  selector:
    app: backend2
    version: blue
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
