k8s/backend2-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-signup-green
spec:
  selector:
    app: backend2
    version: green
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
